Making runtime memory Makefiles automatically build third-party directories
Making the hmm and lea memory directories automatically build
their corresponding third-party directories if the libraries
that they're looking for aren't already there.  This should
fix the gasnet-fast tests from last night, and also make users'
lives simpler.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14843 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/mem-hmm/Makefile
+++ b/runtime/mem-hmm/Makefile
@@ -9,9 +9,9 @@ MEM_LAUNCHER_OBJ_DIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
 ifneq ($(MAKE_LAUNCHER),1)
-TARGETS = $(MEM_COMMON_OBJS)
+TARGETS = $(MEM_COMMON_OBJS) $(MEM_HMM_LIB_DIR)/libhmm.a
 else
-TARGETS = $(MEM_LAUNCHER_OBJS)
+TARGETS = $(MEM_LAUNCHER_OBJS) $(MEM_HMM_LIB_DIR)/libhmm.a
 endif
 
 
