--- a/runtime/mem-hmm/Makefile.share
+++ b/runtime/mem-hmm/Makefile.share
@@ -7,3 +7,6 @@ MEM_COMMON_OBJS = $(MEM_SRCS:%.c=$(MEM_OBJDIR)/%.o)
 MEM_LAUNCHER_OBJS = $(MEM_SRCS:%.c=$(MEM_LAUNCHER_OBJ_DIR)/%.o)
 
 RUNTIME_CFLAGS += -I$(MEM_HMM_INCLUDE_DIR)
+
+$(MEM_HMM_LIB_DIR)/libhmm.a:
+	cd $(THIRD_PARTY_DIR) && $(MAKE) libhmm
