--- a/runtime/mem-lea/Makefile.share
+++ b/runtime/mem-lea/Makefile.share
@@ -8,3 +8,6 @@ MEM_COMMON_OBJS = $(MEM_SRCS:%.c=$(MEM_OBJDIR)/%.o)
 MEM_LAUNCHER_OBJS = $(MEM_SRCS:%.c=$(MEM_LAUNCHER_OBJ_DIR)/%.o)
 
 RUNTIME_CFLAGS += -I$(MEM_LEA_INCLUDE_DIR) -D$(MEM_DEFINES)
+
+$(MEM_LEA_LIB_DIR)/libdlmalloc.a:
+	cd $(THIRD_PARTY_DIR) && $(MAKE) libdlmalloc
