--- a/runtime/mem-lea/Makefile
+++ b/runtime/mem-lea/Makefile
@@ -9,9 +9,9 @@ MEM_LAUNCHER_OBJ_DIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
 ifneq ($(MAKE_LAUNCHER),1)
-TARGETS = $(MEM_COMMON_OBJS)
+TARGETS = $(MEM_COMMON_OBJS) $(MEM_LEA_LIB_DIR)/libdlmalloc.a
 else
-TARGETS = $(MEM_LAUNCHER_OBJS)
+TARGETS = $(MEM_LAUNCHER_OBJS) $(MEM_LEA_LIB_DIR)/libdlmalloc.a
 endif
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.subdirrules
