--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -86,7 +86,7 @@ CHPL_GASNET_DEBUG = nodbg
 endif
 # directories
 GASNET_DIR = $(THIRD_PARTY_DIR)/gasnet
-GASNET_INSTALL_SUBDIR = install/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)/seg-$(CHPL_GASNET_SEGMENT)/$(CHPL_GASNET_DEBUG)
+GASNET_INSTALL_SUBDIR = install/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_TARGET_COMPILER)/seg-$(CHPL_GASNET_SEGMENT)/$(CHPL_GASNET_DEBUG)
 GASNET_INSTALL_DIR = $(GASNET_DIR)/$(GASNET_INSTALL_SUBDIR)
 GASNET_LIB_DIR = $(GASNET_INSTALL_DIR)/lib
 GASNET_INC_MAKEFILE = $(GASNET_INSTALL_DIR)/include/$(CHPL_MAKE_COMM_SUBSTRATE)-conduit/$(CHPL_MAKE_COMM_SUBSTRATE)-par.mak
