Moved code related to optimizing read-only reference arguments into its own file in the optimizations directory (and out of parallel.cpp). It is still called in the same spot.  Simplified code to build the def-use maps only once.  Made other simplifications to the parallel.cpp code, including sharing a single call to compute the call graph.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14912 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/optimizations/Makefile.share
+++ b/compiler/optimizations/Makefile.share
@@ -5,6 +5,7 @@ OPTIMIZATIONS_SRCS = \
 	deadCodeElimination.cpp \
 	inlineFunctions.cpp \
 	liveVariableAnalysis.cpp \
+	optimizeReadOnlyReferenceArguments.cpp \
 	reachingDefinitionsAnalysis.cpp \
 	removeUnnecessaryGotos.cpp \
 	scalarReplace.cpp
