Adding initial support for the CX1
The CX1 uses Infiniband, so made commSubstrate.pl choose the
ibv GASNet substrate by default and launcher.pl choose
gasnetrun_ibv by default (using ssh as the launch command).
Modified the comm-gasnet Makefile to set -D flags as required
by the ibv/vapi conduits.  To make this all work, I have to
set the following environment variables:

CHPL_HOST_PLATFORM cx1
CHPL_COMM gasnet

And an environment variable that lists the node names to
launch onto (running the program without setting this
currently tells you the variable name; longer-term, it
would be nice to save the user the hassle of setting this
variable in our launcher).



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14936 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -40,6 +40,13 @@ ifneq ($(MAKE_LAUNCHER), 1)
 # compiled -O3 is linked to GASNet compiled with debugging enabled
 #
 
+ifeq ($(CHPL_MAKE_COMM_SUBSTRATE),ibv)
+	CHPL_GASNET_MORE_CFLAGS += -DGASNET_CONDUIT_IBV
+endif
+ifeq ($(CHPL_MAKE_COMM_SUBSTRATE),vapi)
+	CHPL_GASNET_MORE_CFLAGS += -DGASNET_CONDUIT_VAPI
+endif
+
 RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL_DIR)/include -I$(GASNET_INSTALL_DIR)/include/$(CHPL_MAKE_COMM_SUBSTRATE)-conduit $(SUPPORT_SETENV_CFLAGS) $(CHPL_GASNET_MORE_CFLAGS)
 endif
 
