Rename hmm to heapmm and consistently use that name.
After I originally added this code, Brad pointed out to me that the naming
didn't really follow any convention. The dlmalloc manager still needs a
similar update.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14946 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/mem-heapmm/Makefile
+++ b/runtime/mem-heapmm/Makefile
@@ -1,5 +1,5 @@
 RUNTIME_ROOT = ..
-RUNTIME_SUBDIR = mem-hmm
+RUNTIME_SUBDIR = mem-heapmm
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.head
  
@@ -9,9 +9,9 @@ MEM_LAUNCHER_OBJ_DIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
 ifneq ($(MAKE_LAUNCHER),1)
-TARGETS = $(MEM_COMMON_OBJS) $(MEM_HMM_LIB_DIR)/libhmm.a
+TARGETS = $(MEM_COMMON_OBJS) $(MEM_HEAPMM_LIB_DIR)/libheapmm.a
 else
-TARGETS = $(MEM_LAUNCHER_OBJS) $(MEM_HMM_LIB_DIR)/libhmm.a
+TARGETS = $(MEM_LAUNCHER_OBJS) $(MEM_HEAPMM_LIB_DIR)/libheapmm.a
 endif
 
 
