--- a/runtime/mem-heapmm/Makefile.share
+++ b/runtime/mem-heapmm/Makefile.share
@@ -6,7 +6,7 @@ SRCS = $(SVN_SRCS)
 MEM_COMMON_OBJS = $(MEM_SRCS:%.c=$(MEM_OBJDIR)/%.o)
 MEM_LAUNCHER_OBJS = $(MEM_SRCS:%.c=$(MEM_LAUNCHER_OBJ_DIR)/%.o)
 
-RUNTIME_CFLAGS += -I$(MEM_HMM_INCLUDE_DIR)
+RUNTIME_CFLAGS += -I$(MEM_HEAPMM_INCLUDE_DIR)
 
-$(MEM_HMM_LIB_DIR)/libhmm.a:
-	cd $(THIRD_PARTY_DIR) && $(MAKE) libhmm
+$(MEM_HEAPMM_LIB_DIR)/libheapmm.a:
+	cd $(THIRD_PARTY_DIR) && $(MAKE) libheapmm
