--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -95,9 +95,9 @@ MPICH1_DIR = $(THIRD_PARTY_DIR)/mpich1
 MPICH1_INSTALL_DIR = $(MPICH1_DIR)/install/$(CHPL_MAKE_TARGET_PLATFORM)
 MPICH1_LIB_DIR = $(MPICH1_INSTALL_DIR)/lib
 
-MEM_HMM_DIR = $(THIRD_PARTY_DIR)/heapMemoryManager
-MEM_HMM_LIB_DIR = $(MEM_HMM_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
-MEM_HMM_INCLUDE_DIR = $(MEM_HMM_DIR)/include
+MEM_HEAPMM_DIR = $(THIRD_PARTY_DIR)/heapmm
+MEM_HEAPMM_LIB_DIR = $(MEM_HEAPMM_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
+MEM_HEAPMM_INCLUDE_DIR = $(MEM_HEAPMM_DIR)/include
 
 MEM_LEA_DIR = $(THIRD_PARTY_DIR)/dlmalloc
 MEM_LEA_LIB_DIR = $(MEM_LEA_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
