Move mem-lea to mem-dlmalloc
Like what I did with heapmm, made dlmalloc always use the name dlmalloc instead
of lea in some places and dlmalloc in others.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14952 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -99,9 +99,9 @@ MEM_HEAPMM_DIR = $(THIRD_PARTY_DIR)/heapmm
 MEM_HEAPMM_LIB_DIR = $(MEM_HEAPMM_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
 MEM_HEAPMM_INCLUDE_DIR = $(MEM_HEAPMM_DIR)/include
 
-MEM_LEA_DIR = $(THIRD_PARTY_DIR)/dlmalloc
-MEM_LEA_LIB_DIR = $(MEM_LEA_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
-MEM_LEA_INCLUDE_DIR = $(MEM_LEA_DIR)/include
+MEM_DLMALLOC_DIR = $(THIRD_PARTY_DIR)/dlmalloc
+MEM_DLMALLOC_LIB_DIR = $(MEM_DLMALLOC_DIR)/lib/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
+MEM_DLMALLOC_INCLUDE_DIR = $(MEM_DLMALLOC_DIR)/include
 
 #
 # how to make a platform-specific subdirectory
