--- a/runtime/mem-dlmalloc/Makefile.share
+++ b/runtime/mem-dlmalloc/Makefile.share
@@ -7,7 +7,7 @@ MEM_DEFINES = USE_LOCKS -DONLY_MSPACES -DMSPACES
 MEM_COMMON_OBJS = $(MEM_SRCS:%.c=$(MEM_OBJDIR)/%.o)
 MEM_LAUNCHER_OBJS = $(MEM_SRCS:%.c=$(MEM_LAUNCHER_OBJ_DIR)/%.o)
 
-RUNTIME_CFLAGS += -I$(MEM_LEA_INCLUDE_DIR) -D$(MEM_DEFINES)
+RUNTIME_CFLAGS += -I$(MEM_DLMALLOC_INCLUDE_DIR) -D$(MEM_DEFINES)
 
-$(MEM_LEA_LIB_DIR)/libdlmalloc.a:
+$(MEM_DLMALLOC_LIB_DIR)/libdlmalloc.a:
 	cd $(THIRD_PARTY_DIR) && $(MAKE) libdlmalloc
