Made comm-gasnet runtime automatically build GASNet if it hasn't been
I've become so enamored of the fact that our mem-* runtime directories
automatically build their corresponding third-party directories (combined
with the fact that the warning that your gasnet directory hasn't been
built seems to be firing so consistently) that I've made our comm-gasnet
directory do the same thing.  Now, instead of blasting you with the
warning (which might scroll by before you see it), it just goes and builds
the thing for you.  Should simplify things immensely.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14973 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -58,9 +58,4 @@ endif
 endif
 
 $(GASNET_INC_MAKEFILE):
-	@echo
-	@echo "******************************************************************************"
-	@echo GASNet not yet built for platform=$(CHPL_MAKE_TARGET_PLATFORM), segment=$(CHPL_GASNET_SEGMENT), debug=$(CHPL_GASNET_DEBUG)
-	@echo Try making third-party from CHPL_HOME
-	@echo "******************************************************************************"
-	@echo
+	cd $(THIRD_PARTY_DIR) && $(MAKE) gasnet
