Fix the XT Makefile so it can optimize the runtime
When adding the -target=linux flag, it was overriding the setting of the
CFLAGS variable, so OPT_CFLAGS was getting undone.

Also, added a print-* target to Makefile.base. To see the value of a variable
type "make print-VAR_NAME". This was taken from a Dr. Dobb's article.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14980 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -122,6 +122,11 @@ printplatform:
 	@echo "CHPL_MAKE_MEM             = $(CHPL_MAKE_MEM)"
 
 #
+# use: make print-X to print the value of the variable X
+#
+print-%: ; @echo $* is $($*)
+
+#
 # OBJ_SUBDIR_MADE creates either a directory or a symbolic link,
 # depending on how CHPLDEVTMP is set -- well, actually it creates a
 # timestamp file (OBJ_SUBDIR_TIMESTAMP) so that the varying time
