--- a/make/compiler/Makefile.cray-xt
+++ b/make/compiler/Makefile.cray-xt
@@ -21,14 +21,12 @@ RANLIB = ranlib
 # flags
 #
 
--include $(CHAPEL_ROOT)/make/compiler/Makefile.cc-cray-xt.$(PE_ENV)
-
 DEBUG_CFLAGS = -g
-OPT_CFLAGS = 
+OPT_CFLAGS = -O3
 
-CFLAGS = -target=linux
-LFLAGS = -target=linux
-LDFLAGS= -target=linux
+CFLAGS  += -target=linux
+LFLAGS  += -target=linux
+LDFLAGS += -target=linux
 
 COMP_CFLAGS = $(CFLAGS) $(XT_COMP_CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
