added game of life exercise
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15049 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/tutorial/workbooks/Makefile
+++ b/doc/tutorial/workbooks/Makefile
@@ -1,7 +1,10 @@
-all: histogram
+all: histogram life
 
 histogram:
 	pdflatex -file-line-error -halt-on-error histogram.tex
+
+life:
+	pdflatex -file-line-error -halt-on-error life.tex
 
 clean:
 	rm -f *.aux *.blg *.bbl *.dvi *.log
