--- a/doc/tutorial/workbooks/Makefile
+++ b/doc/tutorial/workbooks/Makefile
@@ -1,10 +1,13 @@
-all: histogram life
+all: histogram life MonteCarloPi
 
 histogram:
 	pdflatex -file-line-error -halt-on-error histogram.tex
 
 life:
 	pdflatex -file-line-error -halt-on-error life.tex
+
+MonteCarloPi:
+	pdflatex -file-line-error -halt-on-error MonteCarloPi.tex
 
 clean:
 	rm -f *.aux *.blg *.bbl *.dvi *.log
