Added a bounded buffer exercise
In this exercise, a bounded buffer is created and used for a
producer/consumer code. Then more steps are added between the producer and
consumer to extend the pipeline.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15051 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/tutorial/workbooks/Makefile
+++ b/doc/tutorial/workbooks/Makefile
@@ -1,10 +1,13 @@
-all: histogram life MonteCarloPi
+all: histogram life MonteCarloPi boundedBuffer
 
 histogram:
 	pdflatex -file-line-error -halt-on-error histogram.tex
 
 life:
 	pdflatex -file-line-error -halt-on-error life.tex
+
+boundedBuffer:
+	pdflatex -file-line-error -halt-on-error boundedBuffer.tex
 
 MonteCarloPi:
 	pdflatex -file-line-error -halt-on-error MonteCarloPi.tex
