Remove an extra -I from the launcher Makefile
There was an extra -I causing the include paths to look like -I-I/path/ when
compiling the launcher.  Most of our compilers seem to ignore this, but PGI
gives an error.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@15064 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/etc/Makefile.launcher
+++ b/runtime/etc/Makefile.launcher
@@ -9,7 +9,7 @@ include $(CHAPEL_ROOT)/runtime/etc/Makefile.threads-$(CHPL_MAKE_THREADS)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.comm-$(CHPL_MAKE_COMM)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.mem-$(CHPL_MAKE_MEM)
 
-CHAPEL_LN_INC_DIR = -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_LN_INC_DIR = $(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_LN_LIB_DIR = $(CHAPEL_ROOT)/$(LIB_LN_DIR)
 
 LAUNCHER_SRC_NAME = $(TMPDIRNAME)/config.c
