--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -20,6 +20,7 @@ comp_unit_test(testClasses)
 comp_unit_test(testDisambiguation)
 comp_unit_test(testEnums)
 comp_unit_test(testErrorGuard)
+comp_unit_test(testErrors)
 comp_unit_test(testExprIf)
 comp_unit_test(testFieldAccess)
 comp_unit_test(testFindDecl)
