Make header simpler
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/lib/resolution/CMakeLists.txt
+++ b/frontend/lib/resolution/CMakeLists.txt
@@ -18,8 +18,8 @@
 target_sources(libdyno-obj
                PRIVATE
 
-               CallInitDeinit.cpp
                Resolver.cpp
+               call-init-deinit.cpp
                can-pass.cpp
                default-functions.cpp
                disambiguation.cpp
