Split split-init into its own file
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/lib/resolution/Makefile.include
+++ b/frontend/lib/resolution/Makefile.include
@@ -33,6 +33,7 @@ FRONTEND_RESOLUTION_SRCS =                          \
            resolution-types.cpp                     \
            scope-queries.cpp                        \
            scope-types.cpp                          \
+           split-init.cpp                           \
 
 
 SRCS = $(FRONTEND_RESOLUTION_SRCS)
