Add split init test
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -42,6 +42,7 @@ comp_unit_test(testResolveMethodCalls)
 comp_unit_test(testResolveNew)
 comp_unit_test(testReturnTypes)
 comp_unit_test(testScopeResolve)
+comp_unit_test(testSplitInit)
 comp_unit_test(testTaskIntents)
 comp_unit_test(testTuples)
 comp_unit_test(testTypeAndInit)
