feat(build): add CMake integration with Makefile build system
* Look for configured prefix value and store it as the
  cmake install prefix.

* Add install for chpl and chpldoc

* Make CHPL_HOST_CC and CHPL_HOST_CXX internal to CMake
  so that users won't set them along with CMAKE_C_COMPILER
  or CMAKE_CXX_COMPILER

* Add TODOs around makefile arguments from that build system

* Add tools as a subdirectory so we will build chpldoc

* add utility scripts to generate LICENSE, COPYRIGHT, reservedSymbolNames.h

* remove the need for generating CONFIGURED_PREFIX file, replaced
  by writing the value to config.h using CMake

* remove BUILD_VERSION file need, instead handle with config.h and
  CMake

* moved several other fixed, defined values including official_release,
  major, minor, and update versions, to CMake and created accessors for them
  in frontend/include/chpl/util/version_helper.h

* remove symlinks from chpldoc to BUILD_VERSION and version_num.h

* add env options CMAKE_VERBOSE_MAKEFILE, CHPL_CMAKE_PRINTCHPLENV_RESULTS
  to control CMake output

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ cmake-build-*/
 /doc/tutorial/workbooks/*.blg
 /doc/sphinx/build
 
+# Frontend ignores
+/frontend/lib/util/git-version.cpp
 
 # Make ignores.
 /make/Chapel.xcodeproj/*.pbxuser
