--- a/compiler/AST/CMakeLists.txt
+++ b/compiler/AST/CMakeLists.txt
@@ -14,57 +14,65 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+set(SRCS
+    AggregateType.cpp
+    alist.cpp
+    AstCount.cpp
+    AstDump.cpp
+    AstDumpToHtml.cpp
+    AstDumpToNode.cpp
+    AstLogger.cpp
+    AstToText.cpp
+    astutil.cpp
+    AstVisitor.cpp
+    AstVisitorTraverse.cpp
+    baseAST.cpp
+    bb.cpp
+    build.cpp
+    CallExpr.cpp
+    CatchStmt.cpp
+    CForLoop.cpp
+    checkAST.cpp
+    CollapseBlocks.cpp
+    DecoratedClassType.cpp
+    DeferStmt.cpp
+    dominator.cpp
+    DoWhileStmt.cpp
+    expr.cpp
+    flags.cpp
+    FnSymbol.cpp
+    foralls.cpp
+    ForallStmt.cpp
+    ForLoop.cpp
+    IfExpr.cpp
+    ImportStmt.cpp
+    interfaces.cpp
+    iterator.cpp
+    LoopExpr.cpp
+    LoopStmt.cpp
+    ModuleSymbol.cpp
+    ParamForLoop.cpp
+    PartialCopyData.cpp
+    primitive.cpp
+    stmt.cpp
+    symbol.cpp
+    TransformLogicalShortCircuit.cpp
+    TryStmt.cpp
+    type.cpp
+    UseStmt.cpp
+    view.cpp
+    wellknown.cpp
+    WhileDoStmt.cpp
+    WhileStmt.cpp
+   )
+# TODO: These three steps are standard among all the CMakeLists.txt files
+# that are subdirectories of compiler/, maybe factor out to a function in the
+# compiler/CMakeLists.txt?
 target_sources(chpl
-               PRIVATE
-               AggregateType.cpp
-               alist.cpp
-               AstCount.cpp
-               AstDump.cpp
-               AstDumpToHtml.cpp
-               AstDumpToNode.cpp
-               AstLogger.cpp
-               AstToText.cpp
-               astutil.cpp
-               AstVisitor.cpp
-               AstVisitorTraverse.cpp
-               baseAST.cpp
-               bb.cpp
-               build.cpp
-               CallExpr.cpp
-               CatchStmt.cpp
-               CForLoop.cpp
-               checkAST.cpp
-               CollapseBlocks.cpp
-               DecoratedClassType.cpp
-               DeferStmt.cpp
-               dominator.cpp
-               DoWhileStmt.cpp
-               expr.cpp
-               flags.cpp
-               FnSymbol.cpp
-               foralls.cpp
-               ForallStmt.cpp
-               ForLoop.cpp
-               IfExpr.cpp
-               ImportStmt.cpp
-               interfaces.cpp
-               iterator.cpp
-               LoopExpr.cpp
-               LoopStmt.cpp
-               ModuleSymbol.cpp
-               ParamForLoop.cpp
-               PartialCopyData.cpp
-               primitive.cpp
-               stmt.cpp
-               symbol.cpp
-               TransformLogicalShortCircuit.cpp
-               TryStmt.cpp
-               type.cpp
-               UseStmt.cpp
-               view.cpp
-               wellknown.cpp
-               WhileDoStmt.cpp
-               WhileStmt.cpp
-
-              )
+               PUBLIC
+               ${SRCS})
+get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set_property(SOURCE ${SRCS}
+             TARGET_DIRECTORY chpl
+             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
+             APPEND)
