--- a/compiler/main/CMakeLists.txt
+++ b/compiler/main/CMakeLists.txt
@@ -14,16 +14,22 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+set(SRCS
+    arg.cpp
+    checks.cpp
+    commonFlags.cpp
+    config.cpp
+    driver.cpp
+    log.cpp
+    PhaseTracker.cpp
+    runpasses.cpp
+    version.cpp
+   )
 target_sources(chpl
                PRIVATE
-               arg.cpp
-               checks.cpp
-               commonFlags.cpp
-               config.cpp
-               driver.cpp
-               log.cpp
-               PhaseTracker.cpp
-               runpasses.cpp
-               version.cpp
-              )
+               ${SRCS})
+get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set_property(SOURCE ${SRCS}
+             TARGET_DIRECTORY chpl
+             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
+             APPEND)
