--- a/compiler/util/CMakeLists.txt
+++ b/compiler/util/CMakeLists.txt
@@ -14,15 +14,21 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+set(SRCS
+    astlocs.cpp
+    exprAnalysis.cpp
+    files.cpp
+    misc.cpp
+    mysystem.cpp
+    stringutil.cpp
+    timer.cpp
+    tmpdirname.cpp
+   )
 target_sources(chpl
                PRIVATE
-               astlocs.cpp
-               exprAnalysis.cpp
-               files.cpp
-               misc.cpp
-               mysystem.cpp
-               stringutil.cpp
-               timer.cpp
-               tmpdirname.cpp
-              )
+               ${SRCS})
+get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set_property(SOURCE ${SRCS}
+             TARGET_DIRECTORY chpl
+             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
+             APPEND)
