--- a/frontend/Makefile.include
+++ b/frontend/Makefile.include
@@ -24,14 +24,14 @@ DYNO_ENABLE_ASSERTIONS ?= 0
 ifeq ($(CHPL_DEVELOPER), 0)
   ifeq ($(DYNO_ENABLE_ASSERTIONS), 0)
     LIB_CMAKE_ARG := -DCMAKE_BUILD_TYPE=Release
-    LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/dyno/Release
+    LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/frontend/Release
   else
     LIB_CMAKE_ARG := -DCMAKE_BUILD_TYPE=Release -DDYNO_ENABLE_ASSERTIONS=ON
-    LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/dyno/ReleaseWithAsserts
+    LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/frontend/ReleaseWithAsserts
   endif
 else
   LIB_CMAKE_ARG := -DCMAKE_BUILD_TYPE=Debug
-  LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/dyno/Debug
+  LIBCOMPILER_BUILD_DIR := $(COMPILER_BUILD)/frontend/Debug
 endif
 
 CHPL_COMP_LIB = $(LIBCOMPILER_BUILD_DIR)/lib/libdyno.a
