--- a/frontend/lib/util/CMakeLists.txt
+++ b/frontend/lib/util/CMakeLists.txt
@@ -35,4 +35,5 @@ target_sources(libdyno-obj
                string-escapes.cpp
                subprocess.cpp
                terminal.cpp
+               version-info.cpp
               )
