--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -26,12 +26,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
-
-
 set(SRC_DIR     ${CMAKE_CURRENT_SOURCE_DIR})
 
 # TODO: See if we can use these directly, I am not sure we can because
-# the way to concat strings requires an output variable
+# the CMake way to concat strings requires an output variable
 string(CONCAT CHPL_LLVM_COMP_ARGS ${CHPL_HOST_BUNDLED_COMPILE_ARGS} " " ${CHPL_HOST_SYSTEM_COMPILE_ARGS})
 string(CONCAT CHPL_LLVM_LINK_ARGS ${CHPL_HOST_BUNDLED_LINK_ARGS} " " ${CHPL_HOST_SYSTEM_LINK_ARGS})
 
@@ -57,6 +55,21 @@ include_directories(
         )
 
 add_executable(chpl)
+if (NOT EXISTS ${SRC_DIR}/main/LICENSE)
+  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-license ${SRC_DIR}/../ ${SRC_DIR}/main
+                  OUTPUT_FILE ${SRC_DIR}/main/LICENSE)
+endif()
+
+if (NOT EXISTS ${SRC_DIR}/main/COPYRIGHT)
+  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-copyright ${SRC_DIR}/../ ${SRC_DIR}/main
+  OUTPUT_FILE ${SRC_DIR}/main/COPYRIGHT)
+endif()
+
+if (NOT EXISTS ${SRC_DIR}/codegen/reservedSymbolNames.h)
+  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-reservedSymbolNames ${SRC_DIR}/codegen
+  OUTPUT_FILE ${SRC_DIR}/codegen/reservedSymbolNames.h)
+endif()
+
 add_subdirectory(AST)
 add_subdirectory(adt)
 add_subdirectory(backend)
