--- a/compiler/codegen/CMakeLists.txt
+++ b/compiler/codegen/CMakeLists.txt
@@ -14,19 +14,25 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+set(SRCS
+    cg-alist.cpp
+    cg-CForLoop.cpp
+    cg-DoWhileStmt.cpp
+    cg-expr.cpp
+    cg-LoopStmt.cpp
+    cg-stmt.cpp
+    cg-symbol.cpp
+    cg-type.cpp
+    cg-WhileDoStmt.cpp
+    codegen.cpp
+    library.cpp
+    mli.cpp
+   )
 target_sources(chpl
                PRIVATE
-               cg-alist.cpp
-               cg-CForLoop.cpp
-               cg-DoWhileStmt.cpp
-               cg-expr.cpp
-               cg-LoopStmt.cpp
-               cg-stmt.cpp
-               cg-symbol.cpp
-               cg-type.cpp
-               cg-WhileDoStmt.cpp
-               codegen.cpp
-               library.cpp
-               mli.cpp
-              )
+               ${SRCS})
+get_filename_component(DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set_property(SOURCE ${SRCS}
+             TARGET_DIRECTORY chpl
+             PROPERTY COMPILE_DEFINITIONS COMPILER_SUBDIR=${DIR_NAME}
+             APPEND)
