--- a/runtime/src/topo/hwloc/Makefile
+++ b/runtime/src/topo/hwloc/Makefile
@@ -19,8 +19,20 @@
 RUNTIME_ROOT = ../../..
 RUNTIME_SUBDIR = src/topo/hwloc
 
+ifdef CHPL_TOPO_DEBUG
+RUNTIME_DEFS += -DDEBUG
+endif
+
+ifdef DEBUG_NODEID
+RUNTIME_DEFS += -DDEBUG_NODEID
+endif
+
 ifndef CHPL_MAKE_HOME
 export CHPL_MAKE_HOME=$(shell pwd)/$(RUNTIME_ROOT)/..
+endif
+
+ifdef CHPL_TOPO_DEBUG
+CFLAGS += -DDEBUG
 endif
 
 #
