Fix compare link in the email body. use https in the url instead of api.
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -29,7 +29,7 @@ jobs:
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
               echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
-              echo "COMPARE_URL= $( echo '${{github.event.repository.compare_url}}' | awk -v repbase='${{github.event.pull_request.base.sha}}' -v rephead='${{github.event.pull_request.merge_commit_sha}}' '{gsub("{base}", repbase ) gsub("{head}",rephead ) } {print}' )" >> $GITHUB_ENV          
+              echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV          
       - name: checkout
         uses: actions/checkout@v3
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
