--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -13,10 +13,7 @@ jobs:
     runs-on: ubuntu-latest 
     steps:
       - name: print git events
-        run:  cat "$GITHUB_EVENT_PATH"          
-      - name: if_merged
-        if: github.event.pull_request.merged == true
-        run:  echo The PR was merged           
+        run:  cat "$GITHUB_EVENT_PATH"                     
       - name: print GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -28,8 +25,9 @@ jobs:
               curl --location --request GET $COMMIT_URL --header 'X-API-Key: ${{ secrets.GITHUB_TOKEN}}' -o commits.json
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
-              echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
+              echo "MESSAGE=$(echo '[Chapel Merge] (jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g') ')" >> $GITHUB_ENV 
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
+              echo "LOG=$(echo 'Merge pull request # ${{github.event.number}} from ${{github.event.label}}' )" >> $GITHUB_ENV
       - name: checkout
         uses: actions/checkout@v3
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
@@ -53,7 +51,7 @@ jobs:
            # Optional (recommended) mail server password:
            password: ${{secrets.MAIL_PASSWORD}}
            # Required mail subject:
-           subject: Chapel Merge ${{env.MESSAGE}}  
+           subject: ${{env.MESSAGE}}  
            # Required recipients' addresses:
            to: bhavani@hpe.com
            # Required sender full name (address can be skipped):
@@ -67,12 +65,14 @@ jobs:
               Revision: ${{ github.event.pull_request.merge_commit_sha }}  <br>
               Author: ${{ env.AUTHOR}} <br>
               Link: ${{env.LINK}} <br>             
-              Log Message: ${{env.MESSAGE}} <br>  
-                           ${{github.event.pull_request.body}} <br>
-              Diff: ${{github.event.pull_request.diff_url}} <br>
+              Log Message: <br>
+                           ${{env.LOG}} <br>
+                           ${{env.MESSAGE}} <br>  
+                           ${{github.event.pull_request.body}} <br><br>
+              Diff: ${{github.event.pull_request.diff_url}} <br><br>
               
               Modified Files: <br>
-                M . ${{steps.changed-files.outputs.all_changed_and_modified_files}} <br>
+                M . ${{steps.changed-files.outputs.all_changed_and_modified_files}} <br><br>
                 D . ${{steps.changed-files.outputs.deleted_files}} <br>
               Compare: ${{env.COMPARE_URL}} <br>   
               </p>
