--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -51,7 +51,7 @@ jobs:
            # Optional (recommended) mail server password:
            password: ${{secrets.MAIL_PASSWORD}}
            # Required mail subject:
-           subject: ${{env.MESSAGE}}  
+           subject: Chapel Merge  ${{env.MESSAGE}}  
            # Required recipients' addresses:
            to: bhavani@hpe.com
            # Required sender full name (address can be skipped):
