Change the email recipient to discourse commit email
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -53,7 +53,7 @@ jobs:
            # Required mail subject:
            subject: Chapel Merge  ${{env.MESSAGE}}  
            # Required recipients' addresses:
-           to: bhavani@hpe.com
+           to: chapel+commits@discoursemail.com
            # Required sender full name (address can be skipped):
            from: chapel-lang 
            html_body: |
