--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -28,6 +28,7 @@ jobs:
               echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "LOG=$(echo 'Merge pull request # ${{github.event.number}} from ${{github.event.pull_request.head.label}}' )" >> $GITHUB_ENV
+              echo "FILES_CHANGED=$(echo '${{github.event.pull_request._links.html.href}}/files' )" >> $GITHUB_ENV
       - name: checkout
         uses: actions/checkout@v3
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
@@ -37,7 +38,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v32
         with:
-          separator: "\n"                 
+          separator: ","                 
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
         with:
@@ -69,12 +70,14 @@ jobs:
                            ${{env.LOG}} <br>
                            ${{env.MESSAGE}} <br>  
                            ${{github.event.pull_request.body}} <br><br>
-              Diff: ${{github.event.pull_request.diff_url}} <br><br>
+              
               Modified Files: <br>
                    ${{steps.changed-files.outputs.all_changed_and_modified_files}} <br><br>
               Removed Files: <br>     
                    ${{steps.changed-files.outputs.deleted_files}} <br>
-              Compare: ${{env.COMPARE_URL}} <br>   
+              Compare: ${{env.COMPARE_URL}} <br> 
+              Diff: ${{github.event.pull_request.diff_url}} <br>
+              FilesChanged: ${{env.FILES_CHANGED}} <br><br>
               </p>
               </body>
               </html>
