--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -52,7 +52,7 @@ jobs:
            # Optional (recommended) mail server password:
            password: ${{secrets.MAIL_PASSWORD}}
            # Required mail subject:
-           subject: Chapel Merge  ${{github.event.pull_request.title}}  
+           subject: Chapel Merge  ${{github.event.number}}  ${{github.event.pull_request.title}}  
            # Required recipients' addresses:
            to: chapel+commits@discoursemail.com
            # Required sender full name (address can be skipped):
