--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -9,7 +9,7 @@ on:
 jobs: 
   send_email:
    # run this workflow step only when the PR is merged 
-   # if:  github.event.pull_request.merged == true 
+    if:  github.event.pull_request.merged == true 
     runs-on: ubuntu-latest 
     steps:
       - name: print git events
