Factor VarScopeVisitor out of split init
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/lib/resolution/CMakeLists.txt
+++ b/frontend/lib/resolution/CMakeLists.txt
@@ -32,5 +32,6 @@ target_sources(libdyno-obj
                scope-queries.cpp
                scope-types.cpp
                split-init.cpp
+               VarScopeVisitor.cpp
 
               )
