--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/${{ github.repository_owner }}/chapel-github-ci:latest
-      options: --user root
+      options: --user sudo
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
