--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -96,6 +96,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 100000
+    - name: Set ownership
+        run: |
+          # this is to fix "detected dubious ownership in repository"
+          chown -R $(id -u):$(id -g) $PWD   
     - name: find bad runtime calls
       run: |
         ./util/devel/lookForBadRTCalls
