Add FunctionType to production compiler, initial resolution/codegen
Signed-off-by: David Longnecker <dlongnecke-cray@users.noreply.github.com>

--- a/compiler/resolution/CMakeLists.txt
+++ b/compiler/resolution/CMakeLists.txt
@@ -21,9 +21,9 @@ set(SRCS
     callDestructors.cpp
     callInfo.cpp
     cleanups.cpp
+    closures.cpp
     cullOverReferences.cpp
     expandVarArgs.cpp
-    firstClassFunctions.cpp
     fixupExports.cpp
     functionResolution.cpp
     generics.cpp
