--- a/compiler/resolution/Makefile.share
+++ b/compiler/resolution/Makefile.share
@@ -23,9 +23,9 @@ RESOLUTION_SRCS =                                              \
                   callDestructors.cpp                          \
                   callInfo.cpp                                 \
                   cleanups.cpp                                 \
+                  closures.cpp                                 \
                   cullOverReferences.cpp                       \
                   expandVarArgs.cpp                            \
-                  firstClassFunctions.cpp                      \
                   fixupExports.cpp                             \
                   functionResolution.cpp                       \
                   generics.cpp                                 \
