--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,9 +27,6 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set ownership
-      run: |
-        chown -R $(id -u):$(id -g) $PWD 
     - name: make check
       run: |
         ./util/buildRelease/smokeTest chpl
@@ -43,9 +40,6 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set ownership
-      run: |
-        chown -R $(id -u):$(id -g) $PWD 
     - name: make frontend-docs
       run: |
         make frontend-docs
@@ -68,12 +62,6 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set ownership
-      run: |
-        chown -R $(id -u):$(id -g) $PWD 
-    - name: Set ownership
-      run: |
-        chown -R $(id -u):$(id -g) $PWD 
     - name: make mason
       # Use a quickstart config to keep it from running to long
       # While there, run a make check in that config for more coverage
@@ -89,9 +77,6 @@ jobs:
         password: ${{ secrets.github_token }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set ownership
-      run: |
-        chown -R $(id -u):$(id -g) $PWD 
     - name: make test-dyno-with-asserts
       run: |
         make DYNO_ENABLE_ASSERTIONS=1 test-dyno -j`util/buildRelease/chpl-make-cpu_count`
@@ -110,9 +95,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 100000
-    - name: Set ownership
+    - name: Check git version 
       run: |
-        chown -R $(id -u):$(id -g) $PWD   
+        git --version
     - name: find bad runtime calls
       run: |
         ./util/devel/lookForBadRTCalls
